change js to ts & add uuids to datas

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "copy-media": "cp -r media out/",
-    "compile": "tsc -p ./ && npm run copy-media",
+    "compile": "tsc -p ./ && node esbuild.config.js && npm run copy-media",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
+    "esbuild": "^0.25.5",
     "eslint": "^9.25.1",
     "typescript": "^5.8.3"
   },
