--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "sourceMap": true,
     "rootDir": "src",
     "strict": true,
-    "types": ["vscode", "node", "mocha"],         // 👈 notwendig!
-    "moduleResolution": "Node16",  // 👈 wichtig, um Module wie 'vscode' zu finden
-    "esModuleInterop": true,     // optional, aber oft hilfreich bei interop
-    "skipLibCheck": true         // optional, schnellerer Build
+    "types": ["vscode", "node", "mocha"],      
+    "moduleResolution": "Node16",  
+    "esModuleInterop": true,     
+    "skipLibCheck": true       
   }
 }
