--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "resxmanager",
   "publisher": "SamuelMatarese",
+  "icon": "icon.png",
   "displayName": "RESX Manager",
   "repository": {
     "type": "git",
     "url": "https://github.com/samuelmatarese/resourcemanager.git"
   },
   "description": "Manage Resx files easily with this extension",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.101.0"
   },
