--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/samuelmatarese/resourcemanager.git"
   },
   "description": "Manage Resx files easily with this extension",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "engines": {
     "vscode": "^1.101.0"
   },
@@ -56,6 +56,6 @@
   },
   "dependencies": {
     "@vscode/vsce": "^3.5.0",
-    "xmldom": "^0.6.0"
+    "@xmldom/xmldom": "^0.8.11"
   }
 }
